--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,7 @@
 {
     "rewrites": [
       { "source": "/ai/(.*)", "destination": "/backend/ai/$1" },
-      { "source": "/(.*)", "destination": "/frontend/index.html" }
+      { "source": "/src/(.*)", "destination": "/src/$1" },
+      { "source": "/(.*)", "destination": "/index.html" }
     ]
   }
